[package]
name = "eos-prefixd"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "eos-prefixd"
path = "src/main.rs"

[lib]
name = "eos_prefixd"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ipnet = "2"
http = "1"
percent-encoding = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.12"
